--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+          <script src="./assets/lib/es6-promise.min.js"></script>
+        <script src="./assets/lib/nativescript-webview-interface.js"></script>
+        <script src="./assets/index.js"></script>
 </head>
 <body>
   <app-root></app-root>
